--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="cell">
             <div class="lead-btn">
               <div draggable="true">
-                <a draggable="true" data-highlightable="1"
+                <a draggable="true" data-highlightable="1" href="/journeys" id="i8k0w1"
                   ><span draggable="true">Sign Up for Your<br draggable="true" />Free Trial Now</span></a
                 >
               </div>
@@ -115,7 +115,7 @@
             <div class="cell">
               <div class="lead-btn">
                 <div draggable="true">
-                  <a draggable="true" data-highlightable="1"
+                  <a draggable="true" data-highlightable="1" href="/journeys" id="i4nicz"
                     ><span draggable="true">Sign Up for Your<br draggable="true" />Free Trial Now</span></a
                   >
                 </div>
@@ -188,7 +188,7 @@
         <div class="cell" id="ipwbqh">
           <div class="lead-btn">
             <div draggable="true">
-              <a draggable="true" data-highlightable="1"
+              <a draggable="true" data-highlightable="1" href="/journeys" id="i0jmrk"
                 ><span draggable="true">Sign Up for Your<br draggable="true" />Free Trial Now</span></a
               >
             </div>
