--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-  location.href = (location.href.trim('/') + '/developer');
+  location.href = (location.href + '/developer').replace('//', '/');
 </script>
