--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
 <script>
-  if (location.href.endsWith('/')) location.href = 'developer';
-  else location.href = '/developer';
+  location.href = '/journeys/developer';
 </script>
