--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <script>
-  location.href = '/journeys/developer';
+  //location.href = '/journeys/developer';
+  console.log(location.href);
 </script>
