--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <script>
       var base = (document.querySelector('base') || {}).href || '';
 
-      if (location.href.endsWith('/')) location.href = '/' + base + 'developer';
-      else location.href = '/' + base + '/developer';
+      console.log(base);
+      //if (location.href.endsWith('/')) location.href = '/' + base + 'developer';
+      //else location.href = '/' + base + '/developer';
     </script>
   </body>
 </html>
