--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
   </head>
   <body>
     <script>
-      var base = (document.querySelector('base') || {}).href || '';
-
-      console.log(base);
-      //if (location.href.endsWith('/')) location.href = '/' + base + 'developer';
-      //else location.href = '/' + base + '/developer';
+      if (location.href.endsWith('/')) location.href = location.href + 'developer';
+      else location.href = location.href + '/developer';
     </script>
   </body>
 </html>
