--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <script>
-      if (location.href.endsWith('/')) location.href = location.href + 'developer';
-      else location.href = location.href + '/developer';
+      if (location.href.endsWith('/')) location.href = 'developer';
+      else location.href = '/developer';
     </script>
   </body>
 </html>
