--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <script>
       if (location.href.endsWith('/')) location.href = 'developer';
-      else location.href = '/developer';
+      else location.href = 'developer';
     </script>
   </body>
 </html>
